--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,20 @@
-@(message: String)
+@(title: String)
 
-@main("Welcome to Play") {
+<!DOCTYPE html>
 
-    @play20.welcome(message)
+<html lang="en">
+    <head>
+        <title>@title</title>
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/quotes.css")">
+        <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <script src="@routes.Assets.versioned("javascripts/jquery-2.1.4.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/quotes.js")" type="text/javascript"></script>
+    </head>
 
-}
+    <body>
+        <div id="container">
+            <button id="btnQuote">Generate Quote</button>
+            <div id="quoteContainer"></div>
+        </div>
+    </body>
+</html>
