--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -7,14 +7,18 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/quotes.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/favicon.png")">
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
         <script src="@routes.Assets.versioned("javascripts/jquery-2.1.4.min.js")" type="text/javascript"></script>
         <script src="@routes.Assets.versioned("javascripts/quotes.js")" type="text/javascript"></script>
     </head>
 
     <body>
-        <div id="container">
-            <button id="btnQuote">Generate Quote</button>
-            <div id="quoteContainer"></div>
+        <div class="header">
+            <h1>Silicon Valley Quotes</h1>
+        </div>
+        <div class="container">
+            <button class="btnQuote">Generate Quote</button>
+            <div class="quoteContainer"></div>
         </div>
     </body>
 </html>
