added github link and fixed some css

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -21,4 +21,8 @@
             <div class="quoteContainer"></div>
         </div>
     </body>
+    <footer>
+        <div><span>Created by Eidan Spiegel</span></div>
+        <div><a href="https://github.com/espiegel/silicon-valley-quotes">Source on Github</a></div>
+    </footer>
 </html>
